[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/monsters/Monster.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Monster" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collisionshape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.0235294, 0.192157, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
